<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.game.rememberwhen.StorytellerActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:contentDescription="@string/background_content_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/cabin"
        android:scaleType="fitStart"
        android:gravity="center_horizontal"
        android:inputType="textMultiLine"
        android:text="@string/storyteller_prompt_display"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_image" />

    <ImageView
        android:id="@+id/backgroundImage2"
        android:contentDescription="@string/background_content_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/background_image" />

    <Button
        android:id="@+id/quitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/quit_button"
        android:fontFamily="@font/cabin_semibold"
        android:text="@string/quit_game"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/quitBtn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewStoryteller"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/cabin_semibold"
                        android:gravity="center"
                        android:text="@string/storyteller_title"
                        android:textColor="#1B91AB"
                        android:textSize="42sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/textViewPrompt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="#FFFFFF"
                        android:fontFamily="@font/cabin"
                        android:gravity="center_horizontal"
                        android:inputType="textMultiLine"
                        android:text="@string/storyteller_prompt_display"
                        android:textAlignment="center"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/textViewStoryteller" />

                    <Button
                        android:id="@+id/skipButton"
                        android:width="150dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/button_selector"
                        android:fontFamily="@font/cabin"
                        android:gravity="center"
                        android:onClick="skipPrompt"
                        android:text="@string/skip_btn"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnPromptCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/textViewDecision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#FFFFFF"
                    android:fontFamily="@font/cabin"
                    android:gravity="center_horizontal"
                    android:text="@string/storyteller_btn_prompt"
                    android:textAlignment="center"
                    android:textColor="#1B91AB"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPrompt" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/truthButton"
                android:layout_width="249dp"
                android:layout_height="77dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/button_selector"
                android:fontFamily="@font/cabin"
                android:text="@string/storyteller_true_btn"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/lieButton"
                android:layout_width="190dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/button_selector"
                android:fontFamily="@font/cabin"
                android:text="@string/storyteller_false_btn"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/sRulesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rules_button_selector"
        android:fontFamily="@font/cabin"
        android:onClick="openRules"
        android:text="@string/rules"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>