<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.game.rememberwhen.MainActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_content_description"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_image" />

    <ImageView
        android:id="@+id/backgroundImage2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_content_description"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/GameName"
                android:layout_width="319dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/ic_talkbubble"
                android:fontFamily="@font/cabin_semibold"
                android:gravity="center"
                android:hint="@string/player_name"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#1B91AB"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="255dp"
                android:layout_height="77dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="84dp"
                android:layout_marginLeft="84dp"
                android:layout_marginTop="65dp"
                android:layout_marginEnd="85dp"
                android:layout_marginRight="85dp"
                android:autofillHints="username"
                android:background="#80FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/player_name"
                android:inputType="textPersonName"
                android:textColor="#0C0C0C"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/joinButton"
                android:layout_width="166dp"
                android:layout_height="76dp"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/button_selector"
                android:fontFamily="@font/cabin"
                android:onClick="joinRoom"
                android:text="@string/join_room"
                android:textColor="#090808"
                android:textSize="25sp" />

            <Button
                android:id="@+id/createRoomButton"
                android:layout_width="166dp"
                android:layout_height="76dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_selector"
                android:fontFamily="@font/cabin"
                android:onClick="createRoom"
                android:text="@string/create_room"
                android:textColor="#090808"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>